...
        android:layout_alignParentStart="true"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20sp"/>

    <Switch
        android:id="@+id/switchForActionBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:scaleX="1.2"
        android:scaleY="1.2"/>
...
