...

    <item
        type="id"
        name="deleteIngredient" />

    <!-- Side Menu -->
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- Navigation Menu Names -->
    <string name="calorie_counter">Calorie Counter</string>
    <string name="ingredients">Ingredients</string>
    <string name="breakfast">Breakfast</string>
...
    <string name="toggle">Toggle</string>
    <string name="search_hint_ingredient">Enter ingredient search here...</string>
    <string name="search_hint_keyword">Enter keyword search here...</string>


    <!-- Recipe row -->
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>

    <!-- CalorieCount -->
    <string name="addFoodName">+</string>
    <string name="enter_food">Enter Food</string>

...
